# RGBD-Hough-Forest

./: .gitignore  Authors.md  README.md  index.html  license.md  params.json
6DOF_object_detector/: CMakeLists.txt  Makefile  Readme.txt  valgrind_out.txt
6DOF_object_detector/build_1/: CMakeCache.txt  Makefile  cmake_install.cmake
6DOF_object_detector/include/: Candidate.h  Detector.h  Forest.h  HoG.h  Parameters.h  Pixel.h  Surfel.h  Trainer.h  Tree.h  utils.h
6DOF_object_detector/src/: 6DOF_object_detector.cpp  6DOF_object_detector.cpp~  Candidate.cpp  Detector.cpp  HoG.cpp  Pixel.cpp  Surfel.cpp  Trainer.cpp  Tree.cpp  utils.cpp
evaluation/: CMakeLists.txt  bowl__for_icra_with_tight_sampling_and_parallel_training_all_dataset.txt  bowl__for_icra_with_tight_sampling_and_parallel_training_individual_dataset.txt  bowl__for_icra_with_tight_sampling_and_parallel_training_orientations.txt  bowl_for_icra_with_tight_sampling_and_parallel_training_individual_dataset.txt  cap__for_icra_with_tight_sampling_and_parallel_training_all_dataset.txt  cap__for_icra_with_tight_sampling_and_parallel_training_individual_dataset.txt  cap__for_icra_with_tight_sampling_and_parallel_training_orientations.txt  cereal_box__for_icra_with_tight_sampling_and_parallel_training_all_dataset.txt  cereal_box__for_icra_with_tight_sampling_and_parallel_training_individual_dataset.txt  cereal_box__for_icra_with_tight_sampling_and_parallel_training_orientations.txt  coffee_mug__for_icra_with_tight_sampling_and_parallel_training_all_dataset.txt  coffee_mug__for_icra_with_tight_sampling_and_parallel_training_individual_dataset.txt  coffee_mug__for_icra_with_tight_sampling_and_parallel_training_orientations.txt  evaluate.cpp  flashlight__for_icra_with_tight_sampling_and_parallel_training_all_dataset.txt  flashlight__for_icra_with_tight_sampling_and_parallel_training_individual_dataset.txt  flashlight__for_icra_with_tight_sampling_and_parallel_training_orientations.txt  soda_can__for_icra_with_tight_sampling_and_parallel_training_all_dataset.txt  soda_can__for_icra_with_tight_sampling_and_parallel_training_individual_dataset.txt  soda_can__for_icra_with_tight_sampling_and_parallel_training_orientations.txt  test_all.txt
generateTrainingImges/: CMakeLists.txt  config.h  generateTrainingImages.cpp  gradient.txt  objectGeometry.h  table_wood.txt
poseAnnotation/: CMakeLists.txt  poseAnnotation.cpp  test_all.txt
poseAnnotation/qtcreator-build/: CMakeCache.txt  Makefile  cmake_install.cmake  poseAnnotation  poseAnnotation.cbp
qtcreator-build/: 6DOF_object_detector  6DOF_object_detector.cbp  CMakeCache.txt  Makefile  (+1 more)
(+101 files in other folders)
